Fixed alignment on project modal

--- a/css/styles.css
+++ b/css/styles.css
@@ -729,7 +729,6 @@ progress {
     margin-top: calc(-1 * var(--bs-gutter-y));
     margin-right: calc(-0.5 * var(--bs-gutter-x));
     margin-left: calc(-0.5 * var(--bs-gutter-x));
-    justify-content: center;
 }
 .row > * {
     flex-shrink: 0;
@@ -1354,6 +1353,8 @@ progress {
         flex: 0 0 auto;
         width: 66.66666667%;
     }
+
+   
     .col-lg-9 {
         flex: 0 0 auto;
         width: 75%;
@@ -8007,8 +8008,7 @@ fieldset:disabled .btn {
 
 .mb-4 {
     margin-bottom: 1.5rem !important;
-    display: flex;
-    justify-content: flex-start;
+    text-align: start;
 }
 
 
